adding GetSummonerData to RiotApiBridge
